interfaces/src/main/java/org/dllearner/confparser2/ConfParser.java
/* Generated By:JavaCC: Do not edit this line. ConfParser.java */
package org.dllearner.confparser2;

import java.util.HashMap;
import java.util.List;
import java.util.LinkedList;
import java.util.Map;
import java.util.Set;
import java.util.HashSet;
import java.util.SortedSet;
import java.util.TreeSet;

import java.io.File;
import java.io.FileInputStream;
import java.io.FileNotFoundException;
import java.io.IOException;

import org.dllearner.Info;

import org.dllearner.cli.*;
import org.dllearner.parser.KBParser;
import org.dllearner.utilities.datastructures.*;

public class ConfParser implements ConfParserConstants {

        // examples
        private SortedSet<String> positiveExamples = new TreeSet<String>();
        private SortedSet<String> negativeExamples = new TreeSet<String>();

        // conf file options
        private List<ConfFileOption> confOptions = new LinkedList<ConfFileOption>();
        private Map<String,ConfFileOption> confOptionsByName = new HashMap<String,ConfFileOption>();
        private Map<String,List<ConfFileOption>> confOptionsByPrefix = new HashMap<String,List<ConfFileOption>>();

        private void addConfOption(ConfFileOption confOption) {
                confOptions.add(confOption);
                confOptionsByName.put(confOption.getFullName(), confOption);
                String prefix = confOption.getOption();
                if(confOptionsByPrefix.containsKey(prefix))
                        confOptionsByPrefix.get(prefix).add(confOption);
                else {
                        LinkedList<ConfFileOption> optionList = new LinkedList<ConfFileOption>();
                        optionList.add(confOption);
                        confOptionsByPrefix.put(prefix,optionList);
                }
        }

        public SortedSet<String> getPositiveExamples() {
                return positiveExamples;
        }

        public SortedSet<String> getNegativeExamples() {
                return negativeExamples;
        }

        public List<ConfFileOption> getConfOptions() {
                return confOptions;
        }

        public Map<String,ConfFileOption> getConfOptionsByName() {
                return confOptionsByName;
        }

        public ConfFileOption getConfOptionsByName(String name) {
                return confOptionsByName.get(name);
        }

        public Map<String,List<ConfFileOption>> getConfOptionsByPrefix() {
                return confOptionsByPrefix;
        }

        public List<ConfFileOption> getConfOptionsByPrefix(String prefix) {
                return confOptionsByPrefix.get(prefix);
        }

        public static ConfParser parseFile(File filename) throws FileNotFoundException, ParseException {
                ConfParser parser = new ConfParser(new FileInputStream(filename));
                parser.Start();
                return parser;
        }

  final public void Start() throws ParseException {
        ConfFileOption confOption;
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case POS_EX:
      case NEG_EX:
      case ID:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      if (jj_2_1(2147483647)) {
        confOption = ConfOption();
             addConfOption(confOption);
      } else if (jj_2_2(2147483647)) {
        PosExample();
      } else if (jj_2_3(2147483647)) {
        NegExample();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    jj_consume_token(0);
  }

  final public ConfFileOption ConfOption() throws ParseException {
        boolean containsSubOption=false, isNumeric=false, isDouble=false, isSet=false, isList=false, useColon=false;
        String option="", subOption="", value="", value1="", value2="", tmp="", tmp2="";
        int number = 0;
        double numberDouble = 0;
        ConfFileOption confOption;
        Set<String> values = new HashSet<String>();
        List<StringTuple> tuples = new LinkedList<StringTuple>();
    option = Id();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case COMMAND_END:
      jj_consume_token(COMMAND_END);
      subOption = Id();
                                    containsSubOption=true;
      break;
    default:
      jj_la1[1] = jj_gen;
      ;
    }
    jj_consume_token(25);
    if (jj_2_6(2)) {
      value1 = Id();
      jj_consume_token(28);
      value2 = Id();
                                                    useColon = true;
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ID:
        value = Id();
        break;
      case STRING:
        value = String();
        break;
      case NUMBER:
        number = Integer();
                             isNumeric=true;
        break;
      case DOUBLE:
        numberDouble = Double();
                                  isNumeric=true; isDouble=true;
        break;
      default:
        jj_la1[8] = jj_gen;
        if (jj_2_7(2147483647)) {
          jj_consume_token(26);
          jj_consume_token(29);
                                       isSet=true;
        } else {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case 26:
            jj_consume_token(26);
            label_2:
            while (true) {
              if (jj_2_4(4)) {
                ;
              } else {
                break label_2;
              }
              switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
              case STRING:
                tmp = String();
                break;
              case ID:
                tmp = ComplexId();
                break;
              default:
                jj_la1[2] = jj_gen;
                jj_consume_token(-1);
                throw new ParseException();
              }
                                                                   values.add(tmp);
              jj_consume_token(30);
            }
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case STRING:
              tmp = String();
              break;
            case ID:
              tmp = ComplexId();
              break;
            default:
              jj_la1[3] = jj_gen;
              jj_consume_token(-1);
              throw new ParseException();
            }
                                             values.add(tmp);
            jj_consume_token(29);
                                                                    isSet=true;
            break;
          default:
            jj_la1[9] = jj_gen;
            if (jj_2_8(2147483647)) {
              jj_consume_token(27);
              jj_consume_token(31);
                                       isList=true;
            } else {
              switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
              case 27:
                jj_consume_token(27);
                label_3:
                while (true) {
                  if (jj_2_5(6)) {
                    ;
                  } else {
                    break label_3;
                  }
                  jj_consume_token(32);
                  switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
                  case STRING:
                    tmp = String();
                    break;
                  case ID:
                    tmp = Id();
                    break;
                  default:
                    jj_la1[4] = jj_gen;
                    jj_consume_token(-1);
                    throw new ParseException();
                  }
                  jj_consume_token(30);
                  switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
                  case STRING:
                    tmp2 = String();
                    break;
                  case ID:
                    tmp2 = Id();
                    break;
                  default:
                    jj_la1[5] = jj_gen;
                    jj_consume_token(-1);
                    throw new ParseException();
                  }
                  jj_consume_token(33);
            tuples.add(new StringTuple(tmp,tmp2));
                  jj_consume_token(30);
                }
                jj_consume_token(32);
                switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
                case STRING:
                  tmp = String();
                  break;
                case ID:
                  tmp = Id();
                  break;
                default:
                  jj_la1[6] = jj_gen;
                  jj_consume_token(-1);
                  throw new ParseException();
                }
                jj_consume_token(30);
                switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
                case STRING:
                  tmp2 = String();
                  break;
                case ID:
                  tmp2 = Id();
                  break;
                default:
                  jj_la1[7] = jj_gen;
                  jj_consume_token(-1);
                  throw new ParseException();
                }
                jj_consume_token(33);
            tuples.add(new StringTuple(tmp,tmp2));
                jj_consume_token(31);
                isList=true;
                break;
              default:
                jj_la1[10] = jj_gen;
                jj_consume_token(-1);
                throw new ParseException();
              }
            }
          }
        }
      }
    }
        if(containsSubOption) {
                if(isNumeric)
                        if(isDouble)
                                confOption = new ConfFileOption(option,subOption,numberDouble);
                        else
                                confOption = new ConfFileOption(option,subOption,number);
                else
                        if(isSet)
                                confOption = new ConfFileOption(option,subOption,values);
                        else if(isList)
                                confOption = new ConfFileOption(option,subOption,tuples);
                        else
                        { // this is just a temporary hack to get the double colon notation working;
                          // of course we can pass value1 and value2 as separate parameters later on
                          if(useColon)
                                confOption = new ConfFileOption(option,subOption,value1 + ":" + value2);
                          else
                                confOption = new ConfFileOption(option,subOption,value);
                        }

        } else {
                if(isNumeric)
                        if(isDouble)
                                confOption = new ConfFileOption(option,numberDouble);
                        else
                                confOption = new ConfFileOption(option,number);
                else
                        if(isSet)
                                confOption = new ConfFileOption(option,values);
                        else if(isList)
                                confOption = new ConfFileOption(option,tuples);
                        else
                                confOption = new ConfFileOption(option,value);
        }
        {if (true) return confOption;}
    throw new Error("Missing return statement in function");
  }

  final public void PosExample() throws ParseException {
                      String i;
    jj_consume_token(POS_EX);
    i = Individual();
          positiveExamples.add(i);
  }

  final public void NegExample() throws ParseException {
                      String i;
    jj_consume_token(NEG_EX);
    i = Individual();
          negativeExamples.add(i);
  }

  final public String Individual() throws ParseException {
        String name;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ID:
      name = Id();
      break;
    case STRING:
      name = String();
      break;
    default:
      jj_la1[11] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
                {if (true) return KBParser.getInternalURI(name);}
    throw new Error("Missing return statement in function");
  }

  final public String ComplexId() throws ParseException {
  Token t1,t2;
    if (jj_2_9(2)) {
      t1 = jj_consume_token(ID);
      jj_consume_token(28);
      t2 = jj_consume_token(ID);
                                     {if (true) return t1.image + ":" + t2.image;}
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ID:
        t1 = jj_consume_token(ID);
            {if (true) return t1.image;}
        break;
      default:
        jj_la1[12] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    throw new Error("Missing return statement in function");
  }

  final public String Id() throws ParseException {
  Token t;
    t = jj_consume_token(ID);
    {if (true) return t.image;}
    throw new Error("Missing return statement in function");
  }

  final public double Double() throws ParseException {
  Token t;
    t = jj_consume_token(DOUBLE);
    {if (true) return new Double(t.image);}
    throw new Error("Missing return statement in function");
  }

  final public int Integer() throws ParseException {
  Token t;
    t = jj_consume_token(NUMBER);
    {if (true) return new Integer(t.image);}
    throw new Error("Missing return statement in function");
  }

  final public String String() throws ParseException {
  Token t;
  String s;
    t = jj_consume_token(STRING);
    // enclosing "" are removed
    s = t.image;
    s = s.substring(1, s.length() - 1);
    {if (true) return s;}
    throw new Error("Missing return statement in function");
  }

  private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  private boolean jj_2_6(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  private boolean jj_2_7(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  private boolean jj_2_8(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_8(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  private boolean jj_2_9(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_9(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  private boolean jj_3R_5() {
    if (jj_scan_token(COMMAND_END)) return true;
    if (jj_3R_4()) return true;
    return false;
  }

  private boolean jj_3R_11() {
    if (jj_3R_19()) return true;
    return false;
  }

  private boolean jj_3_6() {
    if (jj_3R_4()) return true;
    if (jj_scan_token(28)) return true;
    return false;
  }

  private boolean jj_3R_4() {
    if (jj_scan_token(ID)) return true;
    return false;
  }

  private boolean jj_3_3() {
    if (jj_scan_token(NEG_EX)) return true;
    return false;
  }

  private boolean jj_3_2() {
    if (jj_scan_token(POS_EX)) return true;
    return false;
  }

  private boolean jj_3_1() {
    if (jj_3R_4()) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_5()) jj_scanpos = xsp;
    if (jj_scan_token(25)) return true;
    xsp = jj_scanpos;
    if (jj_3R_6()) {
    jj_scanpos = xsp;
    if (jj_3R_7()) {
    jj_scanpos = xsp;
    if (jj_3R_8()) {
    jj_scanpos = xsp;
    if (jj_3R_9()) {
    jj_scanpos = xsp;
    if (jj_scan_token(26)) {
    jj_scanpos = xsp;
    if (jj_scan_token(27)) return true;
    }
    }
    }
    }
    }
    return false;
  }

  private boolean jj_3R_12() {
    if (jj_3R_18()) return true;
    return false;
  }

  private boolean jj_3R_20() {
    if (jj_scan_token(ID)) return true;
    return false;
  }

  private boolean jj_3R_15() {
    if (jj_3R_4()) return true;
    return false;
  }

  private boolean jj_3R_8() {
    if (jj_3R_17()) return true;
    return false;
  }

  private boolean jj_3R_19() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_9()) {
    jj_scanpos = xsp;
    if (jj_3R_20()) return true;
    }
    return false;
  }

  private boolean jj_3_9() {
    if (jj_scan_token(ID)) return true;
    if (jj_scan_token(28)) return true;
    if (jj_scan_token(ID)) return true;
    return false;
  }

  private boolean jj_3R_18() {
    if (jj_scan_token(STRING)) return true;
    return false;
  }

  private boolean jj_3R_10() {
    if (jj_3R_18()) return true;
    return false;
  }

  private boolean jj_3R_7() {
    if (jj_3R_16()) return true;
    return false;
  }

  private boolean jj_3_8() {
    if (jj_scan_token(27)) return true;
    if (jj_scan_token(31)) return true;
    return false;
  }

  private boolean jj_3R_16() {
    if (jj_scan_token(NUMBER)) return true;
    return false;
  }

  private boolean jj_3R_14() {
    if (jj_3R_18()) return true;
    return false;
  }

  private boolean jj_3_5() {
    if (jj_scan_token(32)) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_12()) {
    jj_scanpos = xsp;
    if (jj_3R_13()) return true;
    }
    if (jj_scan_token(30)) return true;
    xsp = jj_scanpos;
    if (jj_3R_14()) {
    jj_scanpos = xsp;
    if (jj_3R_15()) return true;
    }
    if (jj_scan_token(33)) return true;
    if (jj_scan_token(30)) return true;
    return false;
  }

  private boolean jj_3_7() {
    if (jj_scan_token(26)) return true;
    if (jj_scan_token(29)) return true;
    return false;
  }

  private boolean jj_3R_6() {
    if (jj_3R_4()) return true;
    return false;
  }

  private boolean jj_3_4() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_10()) {
    jj_scanpos = xsp;
    if (jj_3R_11()) return true;
    }
    if (jj_scan_token(30)) return true;
    return false;
  }

  private boolean jj_3R_17() {
    if (jj_scan_token(DOUBLE)) return true;
    return false;
  }

  private boolean jj_3R_13() {
    if (jj_3R_4()) return true;
    return false;
  }

  private boolean jj_3R_9() {
    if (jj_3R_18()) return true;
    return false;
  }

  /** Generated Token Manager. */
  public ConfParserTokenManager token_source;
  SimpleCharStream jj_input_stream;
  /** Current token. */
  public Token token;
  /** Next token. */
  public Token jj_nt;
  private int jj_ntk;
  private Token jj_scanpos, jj_lastpos;
  private int jj_la;
  private int jj_gen;
  final private int[] jj_la1 = new int[13];
  static private int[] jj_la1_0;
  static private int[] jj_la1_1;
  static {
      jj_la1_init_0();
      jj_la1_init_1();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x1c00,0x100,0x1001000,0x1001000,0x1001000,0x1001000,0x1001000,0x1001000,0x1007000,0x4000000,0x8000000,0x1001000,0x1000,};
   }
   private static void jj_la1_init_1() {
      jj_la1_1 = new int[] {0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,};
   }
  final private JJCalls[] jj_2_rtns = new JJCalls[9];
  private boolean jj_rescan = false;
  private int jj_gc = 0;

  /** Constructor with InputStream. */
  public ConfParser(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public ConfParser(java.io.InputStream stream, String encoding) {
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new ConfParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 13; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 13; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Constructor. */
  public ConfParser(java.io.Reader stream) {
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new ConfParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 13; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 13; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Constructor with generated Token Manager. */
  public ConfParser(ConfParserTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 13; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  public void ReInit(ConfParserTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 13; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      if (++jj_gc > 100) {
        jj_gc = 0;
        for (int i = 0; i < jj_2_rtns.length; i++) {
          JJCalls c = jj_2_rtns[i];
          while (c != null) {
            if (c.gen < jj_gen) c.first = null;
            c = c.next;
          }
        }
      }
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }

  static private final class LookaheadSuccess extends java.lang.Error { }
  final private LookaheadSuccess jj_ls = new LookaheadSuccess();
  private boolean jj_scan_token(int kind) {
    if (jj_scanpos == jj_lastpos) {
      jj_la--;
      if (jj_scanpos.next == null) {
        jj_lastpos = jj_scanpos = jj_scanpos.next = token_source.getNextToken();
      } else {
        jj_lastpos = jj_scanpos = jj_scanpos.next;
      }
    } else {
      jj_scanpos = jj_scanpos.next;
    }
    if (jj_rescan) {
      int i = 0; Token tok = token;
      while (tok != null && tok != jj_scanpos) { i++; tok = tok.next; }
      if (tok != null) jj_add_error_token(kind, i);
    }
    if (jj_scanpos.kind != kind) return true;
    if (jj_la == 0 && jj_scanpos == jj_lastpos) throw jj_ls;
    return false;
  }


/** Get the next Token. */
  final public Token getNextToken() {
    if (token.next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    jj_gen++;
    return token;
  }

/** Get the specific Token. */
  final public Token getToken(int index) {
    Token t = token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) t = t.next;
      else t = t.next = token_source.getNextToken();
    }
    return t;
  }

  private int jj_ntk() {
    if ((jj_nt=token.next) == null)
      return (jj_ntk = (token.next=token_source.getNextToken()).kind);
    else
      return (jj_ntk = jj_nt.kind);
  }

  private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  private int[] jj_expentry;
  private int jj_kind = -1;
  private int[] jj_lasttokens = new int[100];
  private int jj_endpos;

  private void jj_add_error_token(int kind, int pos) {
    if (pos >= 100) return;
    if (pos == jj_endpos + 1) {
      jj_lasttokens[jj_endpos++] = kind;
    } else if (jj_endpos != 0) {
      jj_expentry = new int[jj_endpos];
      for (int i = 0; i < jj_endpos; i++) {
        jj_expentry[i] = jj_lasttokens[i];
      }
      jj_entries_loop: for (java.util.Iterator<?> it = jj_expentries.iterator(); it.hasNext();) {
        int[] oldentry = (int[])(it.next());
        if (oldentry.length == jj_expentry.length) {
          for (int i = 0; i < jj_expentry.length; i++) {
            if (oldentry[i] != jj_expentry[i]) {
              continue jj_entries_loop;
            }
          }
          jj_expentries.add(jj_expentry);
          break jj_entries_loop;
        }
      }
      if (pos != 0) jj_lasttokens[(jj_endpos = pos) - 1] = kind;
    }
  }
